# real_world_search_engine

./: ARCHITECTURE_SDAA.md  README.md  main.py  pyproject.toml
scripts/: generate_phase3_catalog.py  scaffold_generator.py
sdsa/: __init__.py  cli.py
sdsa/api/: contracts.md
sdsa/catalog/: __init__.py  objective_blueprints.py  objective_blueprints_phase2.py  objective_blueprints_phase3.py
sdsa/core/: models.py  orchestrator.py
sdsa/gui/: app.py
sdsa/services/: autonomous_creator.py  hypothesis_engine.py  knowledge_graph.py  objective_service.py
sdsa/sim/: physics_engine.py
sdsa/utils/: bootstrap.py
tests/: test_autonomous_creator.py  test_main_entrypoint.py  test_objective_service.py  test_pipeline.py
