[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdsa"
version = "0.1.0"
description = "Prototype industriel SDSA: knowledge graph + hypothesis + simulation + GUI Tkinter"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SDSA Team"}]
dependencies = []

[project.scripts]
sdsa = "sdsa.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sdsa*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
